@@ -3,7 +3,7 @@ package net.hypixel.nerdbot.bot.config.channel;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
-import lombok.extern.log4j.Log4j2;
+import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.PermissionOverride;
@@ -30,7 +30,7 @@ import java.util.stream.Collectors;
 @Getter
 @Setter
 @ToString
-@Log4j2
+@Slf4j
 public class ChannelConfig {
 
     /**
@@ -142,6 +142,11 @@ public class ChannelConfig {
      * The {@link ForumChannel} IDs for the channels ignored by the autopinning feature.
      */
     private String[] autoPinBlacklistedChannels = {};
+
+    /**
+     * Channel name patterns that identify project channels for suggestion categorization
+     */
+    private String[] projectChannelNames = {};
 
     /**
      * Find or create a role-restricted channel group for the given roles
@@ -379,7 +384,7 @@ public class ChannelConfig {
                 return role != null ? role.getName().toLowerCase().replaceAll("[^a-z0-9]", "") : roleId;
             })
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         return String.join("-", roleNames) + "-channels";
     }
@@ -394,7 +399,7 @@ public class ChannelConfig {
                 return role != null ? role.getName() : "Unknown Role";
             })
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         if (roleNames.size() == 1) {
             return roleNames.get(0) + " Channels";
